improve mana calculations